# backend-guide_bot

./: pyproject.toml  readme.md
app/: config.py  main.py
app/api/v1/: chat_router.py
app/common/: EnumStatus.py
app/common/dto/: ApiResponseDto.py
app/common/exception/: CustomException.py
app/core/: ExceptionHandler.py
app/core/services/: langchain_service.py  websocket_service.py
app/core/utils/: prompt_loader.py
app/services/: langchain_service.py  websocket_service.py
data/: product_faq.json
dockerCompose/mongodb/: docker-compose.yml
embedding/: ingest_data_local.py
prompts/: rag_prompt.yaml
templates/: index.html
test/: test_format_docs.py  test_get_a_f_mongodb.py  test_prompt_loader.py  test_retriever.py
